--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
     <script src="https://kit.fontawesome.com/a29188a2f6.js"></script>
 </head>
 <body>
-    <!--[if lt IE 7]>
-               <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-          <![endif]-->
+    <nav class="nav">
+        <ul>
+            <li><a href="#"><i class="fas fa-map"></i></a></li>
+            <li>
+                <div class="home-btn"><a href="#"><i class="fas fa-home"></i></a></div>
+            </li>
+            <li onclick="toggleMore()" class="moreBtn"><a href="#"><i class="fas fa-ellipsis-h"></i></a></li>
+        </ul>
+        <div class="nav-more">
+            <ol>
+                <li>LOGO</li>
+                <li>
+                    <a href="#"><i class="fas fa-cogs"></i>Setting</a>
+                </li>
+                <li><a href="#"><i class="fas fa-question"></i>Help</a></li>
+                <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
+            </ol>
+        </div>
+    </nav>
     <section id="splashscreen" class="page"></section>
 
     <!-- Oliver doing this now -->
