add map.js and map.html

--- a/category.html
+++ b/category.html
@@ -53,7 +53,12 @@
     <section id="map" class="page"></section>
     <section id="request" class="page"></section>
 
-    <script src="category.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+    <!-- Firebase Firestore (database) JS SDK -->
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
+    <script src="js/category.js"></script>
 </body>
 
 </html>
