--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a29188a2f6.js"></script>
 </head>
+
 <body>
     <nav class="nav">
         <ul>
@@ -77,9 +79,14 @@
     <section id="map" class="page"></section>
     <section id="request" class="page"></section>
 
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+    <!-- Firebase Firestore (database) JS SDK -->
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
     <!-- SPA functionality  -->
     <script src="js/spa.js"></script>
     <!-- main js file -->
     <script src="js/main.js"></script>
+
 </body>
+
 </html>
