buttons and sections links

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="categories_container">
             <h3>Category</h3>
             <div class="categories">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+                <a href="#glass-category"><button id="glass"></button></a>
+                <a href="#paper-category"><button id="paper"></button></a>
+                <a href="#general-category"><button id="general"></button></a>
+                <a href="#batteries-category"><button id="batteries"></button></a>
+                <a href="#ewaste-category"><button id="ewaste"></button></a>
+                <a href="#bulky-category"><button id="bulky"></button></a>
             </div>
         </div>
     </section>
@@ -70,7 +70,13 @@
     <section id="search" class="page">
     </section>
 
-    <section id="category" class="page"></section>
+    <section id="glass-category" class="page"></section>
+    <section id="paper-category" class="page"></section>
+    <section id="general-category" class="page"></section>
+    <section id="batteries-category" class="page"></section>
+    <section id="ewaste-category" class="page"></section>
+    <section id="bulky-category" class="page"></section>
+
     <!--Ana is doing the item page-->
     <section id="item" class="page">
         <section id="item-container"></section>
