--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a29188a2f6.js"></script>
 </head>
-<body>
+<body onhashchange="pageChange()">
     <nav class="nav">
         <ul>
-            <li><a href="#"><i class="fas fa-map"></i></a></li>
+            <li><a href="#map"><i class="fas fa-map"></i></a></li>
             <li>
-                <div class="home-btn"><a href="#"><i class="fas fa-home"></i></a></div>
+                <div class="home-btn"><a href="#homepage"><i class="fas fa-home"></i></a></div>
             </li>
             <li onclick="toggleMore()" class="moreBtn"><a href="#"><i class="fas fa-ellipsis-h"></i></a></li>
         </ul>
