--- a/map.html
+++ b/map.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/map.css">
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 
@@ -53,11 +52,13 @@
             <div><img src="media/ewaste.png"></div>
         </div>
     </section>
-    <div class="map">
-        <iframe
-            src='https://api.mapbox.com/styles/v1/kattata/ckf3tp6w60wkg19ql7zv06r0y.html?fresh=true&title=false&access_token=pk.eyJ1Ijoia2F0dGF0YSIsImEiOiJjazdkMW9samkwamVxM2ZwYTdycWVqeTdnIn0.UiaVPV8_C6knWwC1_K8zkA'></iframe>
-    </div>
 
+    <iframe
+        src='https://api.mapbox.com/styles/v1/kattata/ckf3tp6w60wkg19ql7zv06r0y.html?fresh=true&title=false&access_token=pk.eyJ1Ijoia2F0dGF0YSIsImEiOiJjazdkMW9samkwamVxM2ZwYTdycWVqeTdnIn0.UiaVPV8_C6knWwC1_K8zkA'></iframe>
+
+
+    <!-- SCRIPTS -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"
