--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/map.css">
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a29188a2f6.js"></script>
@@ -89,9 +90,7 @@
     </section>
 
     <section id="map" class="page">
-        <iframe
-            src='https://api.mapbox.com/styles/v1/kattata/ckf3tp6w60wkg19ql7zv06r0y.html?fresh=true&title=false&access_token=pk.eyJ1Ijoia2F0dGF0YSIsImEiOiJjazdkMW9samkwamVxM2ZwYTdycWVqeTdnIn0.UiaVPV8_C6knWwC1_K8zkA'>
-        </iframe>
+        <div id="mapbox"></div>
         <div class="map-title-container">
             <h1>Recycle stations</h1>
         </div>
@@ -117,15 +116,12 @@
     <!--item js file-->
     <script src="js/item.js"></script>
     <!-- map js files -->
-
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"
         integrity="sha256-zUQGihTEkA4nkrgfbbAM1f3pxvnWiznBND+TuJoUv3M=" crossorigin="anonymous"></script>
     <script src="js/map.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+
 </body>
 
 </html>
