trying stuff with Category class

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="categories_container">
             <h3>Category</h3>
             <div class="categories">
-                <a href="#glass-category"><button id="glass"></button></a>
+                <a href="#category" onclick="glass.append()"><button id="glass"></button></a>
                 <a href="#paper-category"><button id="paper"></button></a>
                 <a href="#general-category"><button id="general"></button></a>
                 <a href="#batteries-category"><button id="batteries"></button></a>
@@ -77,12 +77,8 @@
     <section id="search" class="page">
     </section>
 
-    <section id="glass-category" class="page"></section>
-    <section id="paper-category" class="page"></section>
-    <section id="general-category" class="page"></section>
-    <section id="batteries-category" class="page"></section>
-    <section id="ewaste-category" class="page"></section>
-    <section id="bulky-category" class="page"></section>
+    <section id="category" class="page"></section>
+
 
     <!--Ana is doing the item page-->
     <section id="item-container" class="page">
@@ -121,6 +117,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"
         integrity="sha256-zUQGihTEkA4nkrgfbbAM1f3pxvnWiznBND+TuJoUv3M=" crossorigin="anonymous"></script>
     <script src="js/map.js"></script>
+    <script src="js/category.js"></script>
 
 </body>
 
