slide down animation on searchbar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a29188a2f6.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 </head>
 
@@ -45,7 +46,7 @@
     <section id="homepage" class="page">
         <div class="homepage_top"></div>
         <div class="searchbar_container">
-            <input type="text" placeholder=" Search for trash...">
+            <input id="inputid" type="text" placeholder=" Search for trash...">
         </div>
         <div class="popularitems_container">
             <h3>Popular items</h3>
