--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h1>Recycle stations</h1>
         </div>
         <div class="map-categories">
-            <div><img onclick="showLocations(false)" src="media/glass.png"></div>
+            <div><img class="glass" src="media/glass.png"></div>
             <div><img src="media/general.png"></div>
             <div><img src="media/paper.png"></div>
             <div><img src="media/batteries.png"></div>
