search bar animation done

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a29188a2f6.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 </head>
 
@@ -47,6 +48,11 @@
         <div class="homepage_top"></div>
         <div class="searchbar_container">
             <input id="inputid" type="text" placeholder=" Search for trash...">
+        </div>
+        <div class="search_results_container">
+            <div class="search_results">
+
+            </div>
         </div>
         <div class="popularitems_container">
             <h3>Popular items</h3>
