--- a/index.html
+++ b/index.html
@@ -97,8 +97,19 @@
         <div class="map-title-container">
             <h1>Recycle stations</h1>
         </div>
+        <div class="pant-options">
+            <div class="checkbox-container">
+                <input type="checkbox" id="pant-stations">
+                <label for="pant-stations">Pant stations</label>
+            </div>
+            <div class="checkbox-container">
+                <input type="checkbox" id="flaskeautomat">
+                <label for="flaskeautomat">Flaskeautomat</label>
+            </div>
+
+        </div>
         <div class="map-categories">
-            <div><img class="glass" src="media/glass.png"></div>
+            <div><img onclick="showPantOptions()" src="media/glass.png"></div>
             <div><img src="media/general.png"></div>
             <div><img src="media/paper.png"></div>
             <div><img src="media/batteries.png"></div>
