--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="categories_container">
             <h3>Category</h3>
             <div class="categories">
-                <a href="#category" onclick="glass.append()"><button id="glass"></button></a>
-                <a href="#paper-category"><button id="paper"></button></a>
+                <a href="#glass-page"><button id="glass"></button></a>
+                <a href="#paper-page"><button id="paper"></button></a>
                 <a href="#general-category"><button id="general"></button></a>
                 <a href="#batteries-category"><button id="batteries"></button></a>
                 <a href="#ewaste-category"><button id="ewaste"></button></a>
