--- a/request.html
+++ b/request.html
@@ -27,6 +27,7 @@
                 <textarea id="description" required></textarea>
 
                 <input type="file" id="fileInput" accept="image/*" name="" id="addInput">
+                <img id="imagePreview" class="image-preview">
                 <input type="submit" value="Send" onclick="sendRequest()">
             </form>
         </div>
