--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 
             </div>
             <div class="map-categories">
-                <div><img onclick="showPantOptions()" src="media/glass.png"></div>
-                <div><img src="media/general.png"></div>
-                <div><img src="media/paper.png"></div>
-                <div><img src="media/batteries.png"></div>
-                <div><img src="media/bulky.png"></div>
-                <div><img src="media/ewaste.png"></div>
+                <div><img id="map-glass" onclick="showPantOptions()" src="media/glass.png"></div>
+                <div><img id="map-general" src="media/general.png"></div>
+                <div><img id="map-paper" src="media/paper.png"></div>
+                <div><img id="map-batteries" src="media/batteries.png"></div>
+                <div><img id="map-bulky" src="media/bulky.png"></div>
+                <div><img id="map-ewaste" src="media/ewaste.png"></div>
             </div>
 
         </section>
