Working choosing categories

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ol>
         </div>
     </nav>
-    <main id="#webapp">
+    <div id="webapp">
         <section id="splashscreen" class="page"></section>
 
         <!-- Oliver doing this now -->
@@ -76,7 +76,7 @@
                     <a href="#general-category"><button id="general"></button></a>
                     <a href="#batteries-category"><button id="batteries"></button></a>
                     <a href="#ewaste-category"><button id="ewaste"></button></a>
-                    <a href="#bulky-category"><button id="bulky"></button></a>
+                    <a href="#Bulky-category"><button id="bulky"></button></a>
                 </div>
             </div>
         </section>
@@ -120,7 +120,7 @@
 
         </section>
         <section id="request" class="page"></section>
-    </main>
+    </div>
 
 
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
