--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 <div class="categories">
                     <a href="#glass-page"><button id="glass"></button></a>
                     <a href="#paper-page"><button id="paper"></button></a>
-                    <a href="#general-category"><button id="general"></button></a>
-                    <a href="#batteries-category"><button id="batteries"></button></a>
-                    <a href="#ewaste-category"><button id="ewaste"></button></a>
-                    <a href="#Bulky-category"><button id="bulky"></button></a>
+                    <a href="#general-page"><button id="general"></button></a>
+                    <a href="#batteries-page"><button id="batteries"></button></a>
+                    <a href="#ewaste-page"><button id="ewaste"></button></a>
+                    <a href="#bulky-page"><button id="bulky"></button></a>
                 </div>
             </div>
         </section>
