JS form validation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
         <div class="nav-more">
             <ol>
-                <li>LOGO</li>
+                <li><img src="media/logo.png" alt="logo"></li>
                 <li>
                     <a href="#"><i class="fas fa-cogs"></i>Setting</a>
                 </li>
