--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <script src="https://kit.fontawesome.com/a29188a2f6.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
 </head>
 
 <body onhashchange="pageChange()">
@@ -122,7 +121,6 @@
         <section id="request" class="page"></section>
     </div>
 
-
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
     <!-- Firebase Firestore (database) JS SDK -->
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
@@ -132,13 +130,13 @@
     <script src="js/main.js"></script>
     <!--item js file-->
     <script src="js/item.js"></script>
-    <script src="js/category.js"></script>
     <!-- map js files -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"
         integrity="sha256-zUQGihTEkA4nkrgfbbAM1f3pxvnWiznBND+TuJoUv3M=" crossorigin="anonymous"></script>
     <script src="js/map.js"></script>
+    <!-- category js file -->
     <script src="js/category.js"></script>
 
 </body>
