--- a/request.html
+++ b/request.html
@@ -25,8 +25,9 @@
 
                 <label for="description">Description</label>
                 <textarea id="description" required></textarea>
-
-                <input type="file" id="fileInput" accept="image/*" name="" id="addInput">
+                
+                <input type="file" id="fileInput" class="fileInput" accept="image/*">
+                <span class="invalid"></span>
                 <input type="submit" value="Send" onclick="sendRequest()">
             </form>
         </div>
