slick works even with firebase

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
         <div class="nav-more">
             <ol>
-                <li><img src="media/logo.png" alt="logo"></li>
+                <li>LOGO</li>
                 <li>
                     <a href="#"><i class="fas fa-cogs"></i>Setting</a>
                 </li>
