--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="homepage" class="page">
             <div class="homepage_top"></div>
             <div class="searchbar_container">
-                <input id="inputid" type="text" placeholder=" Search for trash...">
+                <input id="inputid" type="text" placeholder=" Search for trash..." onkeyup="search(this.value)">
             </div>
             <div class="search_results_container">
                 <div class="search_results">
