--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
     <div id="webapp">
-        <section id="splashscreen" class="page"></section>
+        <section id="onboarding" class="page"></section>
 
         <!-- Oliver doing this now -->
         <section id="homepage" class="page">
