appending popitems works but looks bad

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <h3>Popular items</h3>
                 <div class="popularitems">
                     <!--this is temporary, we have to find a way to only change the content on the item section-->
-                    <a href="#item-container"><button>Milk carton</button></a>
-                    <button>Pizza box</button>
-                    <button>Batteries</button>
+                    <a href="#milkcarton-page"><button>Milk carton</button></a>
+                    <a href="#pizzabox-page"><button>Pizza box</button></a>
+                    <a href="#batteries-page"><button>Batteries</button></a>
                     <button>Diaper</button>
                     <button>Broken bottle</button>
                     <button>Juice box</button>
@@ -88,9 +88,25 @@
 
 
         <!--Ana is doing the item page-->
-        <section id="item-container" class="page">
-            <!--add html template in items.js-->
+        <section id="milkcarton-page" class="page">
+
         </section>
+        <section id="pizzabox-page" class="page">
+
+        </section>
+        <section id="batteries-page" class="page">
+
+        </section>
+        <section id="beercan-page" class="page">
+
+        </section>
+        <section id="juicebox-page" class="page">
+
+        </section>
+        <section id="diapers-page" class="page">
+
+        </section>
+
 
         <section id="map" class="page">
             <div id="mapbox"></div>
