added more items, but milk page looks bad

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <a href="#milkcarton-page"><button>Milk carton</button></a>
                     <a href="#pizzabox-page"><button>Pizza box</button></a>
                     <a href="#batteries-page"><button>Batteries</button></a>
-                    <button>Diaper</button>
-                    <button>Broken bottle</button>
-                    <button>Juice box</button>
+                    <a href="#beercan-page"><button>Beer can</button></a>
+                    <a href="#juicebox-page"><button>Juice box</button></a>
+                    <a href="#diapers-page"><button>Diapers</button></a>
                 </div>
                 <button class="seeall">See all items (564)</button>
             </div>
@@ -88,25 +88,12 @@
 
 
         <!--Ana is doing the item page-->
-        <section id="milkcarton-page" class="page">
-
-        </section>
-        <section id="pizzabox-page" class="page">
-
-        </section>
-        <section id="batteries-page" class="page">
-
-        </section>
-        <section id="beercan-page" class="page">
-
-        </section>
-        <section id="juicebox-page" class="page">
-
-        </section>
-        <section id="diapers-page" class="page">
-
-        </section>
-
+        <section id="milkcarton-page" class="page"> </section>
+        <section id="pizzabox-page" class="page"></section>
+        <section id="batteries-page" class="page"></section>
+        <section id="beercan-page" class="page"></section>
+        <section id="juicebox-page" class="page"></section>
+        <section id="diapers-page" class="page"></section>
 
         <section id="map" class="page">
             <div id="mapbox"></div>
