--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
 
-        <section id="search" class="page">
+        <section id="item" class="page">
         </section>
 
         <section id="category" class="page"></section>
@@ -91,7 +91,7 @@
         <section id="item-container" class="page">
             <!--add html template in items.js-->
         </section>
-
+        <!-- map -->
         <section id="map" class="page">
             <div id="mapbox"></div>
             <div class="map-title-container">
