--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
             <div class="popularitems_container">
                 <h3>Popular items</h3>
                 <div class="popularitems">
-                    <!--this is temporary, we have to find a way to only change the content on the item section-->
                     <a href="#milkcarton-page"><button>Milk carton</button></a>
                     <a href="#pizzabox-page"><button>Pizza box</button></a>
                     <a href="#batteries-page"><button>Batteries</button></a>
@@ -84,10 +83,8 @@
         <section id="search" class="page">
         </section>
 
-        <section id="category" class="page"></section>
 
-
-        <!--Ana is doing the item page-->
+        <!--Ana is doing the item pages-->
         <section id="milkcarton-page" class="page"> </section>
         <section id="pizzabox-page" class="page"></section>
         <section id="batteries-page" class="page"></section>
@@ -95,6 +92,15 @@
         <section id="juicebox-page" class="page"></section>
         <section id="diapers-page" class="page"></section>
 
+        <!--Ana is doing the category pages-->
+        <section id="glass-page" class="page"></section>
+        <section id="paper-page" class="page"></section>
+        <section id="general-page" class="page"></section>
+        <section id="batteries-page" class="page"></section>
+        <section id="ewaste-page" class="page"></section>
+        <section id="bulky-page" class="page"></section>
+
+        <!--Map-->
         <section id="map" class="page">
             <div id="mapbox"></div>
             <div class="map-title-container">
@@ -121,6 +127,7 @@
             </div>
 
         </section>
+        <!--Request-->
         <section id="request" class="page"></section>
     </div>
 
