more items added + clickable search items

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="popularitems">
                     <a href="#milkcarton-page"><button>Milk carton</button></a>
                     <a href="#pizzabox-page"><button>Pizza box</button></a>
-                    <a href="#batteries-page"><button>Batteries</button></a>
+                    <a href="#batteries_item-page"><button>Batteries</button></a>
                     <a href="#beercan-page"><button>Beer can</button></a>
                     <a href="#juicebox-page"><button>Juice box</button></a>
                     <a href="#diapers-page"><button>Diapers</button></a>
@@ -87,10 +87,11 @@
         <!--Ana is doing the item pages-->
         <section id="milkcarton-page" class="page"> </section>
         <section id="pizzabox-page" class="page"></section>
-        <section id="batteries-page" class="page"></section>
+        <section id="batteries_item-page" class="page"></section>
         <section id="beercan-page" class="page"></section>
         <section id="juicebox-page" class="page"></section>
         <section id="diapers-page" class="page"></section>
+        <section id="bottle-page" class="page"></section>
 
         <!--Ana is doing the category pages-->
         <section id="glass-page" class="page"></section>
