--- a/index.html
+++ b/index.html
@@ -110,16 +110,26 @@
             <div class="pant-options">
                 <div class="checkbox-container">
                     <input type="checkbox" id="pant-stations">
-                    <label for="pant-stations">Pant stations</label>
+
+                    <label for="flaskeautomat">Flaskeautomat</label>
                 </div>
                 <div class="checkbox-container">
                     <input type="checkbox" id="flaskeautomat">
-                    <label for="flaskeautomat">Flaskeautomat</label>
+                    <label for="pant-stations">Pant stations</label>
                 </div>
-
+                <i class="far fa-question-circle help"></i>
+            </div>
+            <div class="help-container">
+                <div class="help-header">
+                    <h4>Flaskeautomat vs. Pant station</h4>
+                    <a class="close">&times;</a>
+                </div>
+                <p>Flaskeautomats are the machines in most of the grocery stores, where you can dispose of your cans and
+                    , while pant stations are
+                    places, where you can dispose of bigger amounts of cans and bottles.</p>
             </div>
             <div class="map-categories">
-                <div><img id="map-glass" onclick="showPantOptions()" src="media/glass.png"></div>
+                <div><img id="map-glass" src="media/glass.png"></div>
                 <div><img id="map-general" src="media/general.png"></div>
                 <div><img id="map-paper" src="media/paper.png"></div>
                 <div><img id="map-batteries" src="media/batteries.png"></div>
