--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Throw Me Right</title>
-    <meta name="description" content="">
+    <meta name="description" content="Throw me right - app which will help you recycle your trash.">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="slick/slick.css">
