Fully working searchbar

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
         <section id="homepage" class="page">
             <div class="homepage_top"></div>
             <div class="searchbar_container">
-                <input id="inputid" type="text" placeholder=" Search for trash..." onkeyup="search(this.value)">
+                <input id="inputid" type="search" placeholder=" Search for trash..." onkeyup="search(this.value)">
             </div>
             <div class="search_results_container">
-                <div class="search_results">
-
-                </div>
+                
             </div>
             <div class="popularitems_container">
                 <h3>Popular items</h3>
