--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                 <input id="inputid" type="text" placeholder=" Search for trash..." onkeyup="search(this.value)">
             </div>
             <div class="search_results_container">
-                <div class="search_results">
-
-                </div>
+                <div class="search_results"></div>
             </div>
             <div class="popularitems_container">
                 <h3>Popular items</h3>
@@ -109,12 +107,12 @@
             </div>
             <div class="pant-options">
                 <div class="checkbox-container">
-                    <input type="checkbox" id="pant-stations">
+                    <input type="checkbox" id="flaskeautomat">
 
                     <label for="flaskeautomat">Flaskeautomat</label>
                 </div>
                 <div class="checkbox-container">
-                    <input type="checkbox" id="flaskeautomat">
+                    <input type="checkbox" id="pant-stations">
                     <label for="pant-stations">Pant stations</label>
                 </div>
                 <i class="far fa-question-circle help"></i>
