button to map + some padding

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <ol>
                 <li><img src="media/logo.png" alt="logo"></li>
                 <li>
-                    <a href="#"><i class="fas fa-cogs"></i>Setting</a>
+                    <a><i class="fas fa-cogs"></i>Setting</a>
                 </li>
-                <li><a href="#"><i class="fas fa-question"></i>Help</a></li>
-                <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
+                <li><a><i class="fas fa-question"></i>Help</a></li>
+                <li><a><i class="fas fa-address-book"></i>Contact</a></li>
             </ol>
         </div>
     </nav>
@@ -146,9 +146,9 @@
                         <h4>Success!</h4>
                         <p>Thank you for your request!</p>
                         <p>We'll send you an e-mail when the item has been added.</p>
-        
+
                         <a href="#homepage"><button class="go-home">Done</button></a>
-        
+
                     </div>
                 </form>
             </div>
