--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ol>
                 <li><img src="media/logo.png" alt="logo"></li>
                 <li>
-                    <a><i class="fas fa-cogs"></i>Setting</a>
+                    <a><i class="fas fa-cogs"></i>Settings</a>
                 </li>
                 <li><a><i class="fas fa-question"></i>Help</a></li>
                 <li><a><i class="fas fa-address-book"></i>Contact</a></li>
